--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/todoriandb
-    username: ohgiraffers
-    password: ohgiraffers
+    # url: jdbc:h2:tcp://localhost/~/test;MODE=MariaDB
+    url: jdbc:h2:mem:test;MODE=MariaDB
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
 
   application:
     name: todorian
