Feat: .gitignore - log 관련 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ build/
 /build/generated/
 /src/main/java/com/todorian/Q*.java
 /src/main/resources/application.properties
+*.log
+**/*.log
+/log/**.log
 
 ### STS ###
 .apt_generated
