--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ build/
 !**/src/test/**/build/
 /build/generated/
 /src/main/java/com/todorian/Q*.java
+/src/main/resources/application.properties
+application.properties
+*.log
+**/*.log
+/log/**.log
 
 ### STS ###
 .apt_generated
