--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,8 @@ dependencies {
 
     // 테스트 기능
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.mockito:mockito-core:4.8.0'
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
     // swagger-ui
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2")
