--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-Xshare:off' // JVM 아규먼트 설정
 }
 
 // Querydsl 프로젝트 build Directory 설정
